--- a/src/commons/styles/defaults/colors.scss
+++ b/src/commons/styles/defaults/colors.scss
@@ -1,7 +1,9 @@
 @import './variables';
 
 :root {
+  // Easter egg: if you found it, be happy – this is your color! <3
   --app-primary-background-color: #339bbe;
+
   --app-primary-color: #12293d;
   --app-secondary-color: #46cbff;
 }
