--- a/src/components/ResultsList/ResultsList.module.scss
+++ b/src/components/ResultsList/ResultsList.module.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   list-style: none;
+  margin-bottom: 20vh;
   padding: 0 (2 * $base-design-unit);
 
   & > li:not(:last-child) {
