Add saga for fetching the results on the app :art:

--- a/src/components/LocationContext/LocationContext.module.scss
+++ b/src/components/LocationContext/LocationContext.module.scss
@@ -18,7 +18,11 @@
 .locationKey {
   animation: location-key 1s ease-out;
   cursor: pointer;
+  text-decoration: underline;
   transition: color .2s ease-out;
 
-  &:hover { color: $gray; }
+  &:hover {
+    color: $gray;
+    text-decoration: none;
+  }
 }
