--- a/src/components/ResultsList/ResultsList.module.scss
+++ b/src/components/ResultsList/ResultsList.module.scss
@@ -12,7 +12,13 @@
   width: 10 * $base-design-unit;
 }
 
+@keyframes results-list-popup {
+  0% { opacity: 0; }
+  1% { opacity: 1; }
+}
+
 .resultsList {
+  animation: results-list-popup .5s ease-out;
   display: flex;
   flex-direction: column;
   list-style: none;
